make ajax request

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quote Machine</title>
   <link href="https://fonts.googleapis.com/css?family=Courgette|Open+Sans:400,600" rel="stylesheet">
   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
@@ -21,11 +21,10 @@
       <button type="button" class="get-quote">New quote</button>
       <button type="button" class="twitt"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>Share quote</button>
     </div>
-
   </main>
 
-
-
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="app.js"></script>
 </body>
 
 </html>
