add button new  onclick function

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <h1>Quote Machine</h1>
   <main>
     <div class="quote-content">
-      <p class="quote"><i class="fa fa-quote-right" aria-hidden="true"></i>Some quote goes here</p>
-      <p class="author">Some author</p>
+      <i class="fa fa-quote-right" aria-hidden="true"></i>
+      <p class="quote" id="quote"></p>
+      <p class="author" id="author"></p>
     </div>
     <div class="button-content">
       <button type="button" class="get-quote">New quote</button>
