--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <h1>Quote Machine</h1>
   <main>
     <div class="quote-content">
-      <i class="fa fa-quote-right" aria-hidden="true"></i>
       <p class="quote" id="quote"></p>
       <p class="author" id="author"></p>
     </div>
     <div class="button-content">
-      <button type="button" class="get-quote">New quote</button>
-      <button type="button" class="twitt"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>Share quote</button>
+      <button type="button" class="get-quote">Next quote</button>
+      <button type="button" class="twitt"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i>Share</button>
     </div>
   </main>
+  <p class="caption">Created by Hanna Rudy</p>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="app.js"></script>
